# GITR

./: CMakeLists.txt  README.md
CMake/: crosslink_components.cmake  define_source_components.cmake  dependencies.cmake  enforce_build_order.cmake  indicators.cmake  thrust.cmake  user_options.cmake
database/materialData/: surfaceReactions_D_on_W.nc
docs/: README.MD
include/: Boundary.h  Particles.h  Surfaces.h  array.h  backgroundCollisionsMCC.h  boundaryConditions.h  boundaryInit.h  collisions.h  configInterface.h  configInterfaceExceptions.h  config_interface.h  constants.h  curandInitialize.h  dump.h  elementaryProcesses.h  flags.h  flags.hpp  geometryCheck.h  getParticleData.h  ionize.h  processIonizationRecombination.h  processSurfacesModels.h  progressBar.h  pusher.h  recombine.h  reflectiveBoundaryConditions.h  sheathModel.h  sheathModels.h  surfaceModel.h  surfaceReactions.h  targetNames.h  test.py  thompson.h  utils.h
src/: SurfaceModelData.cpp  boris.cpp  collisions.cpp  configInterface.cpp  config_interface.cpp  elementaryProcesses.cpp  flags.cpp  geometryCheck.cpp  gitr.cpp  grid.cpp  interpolater.cpp  ionize.cpp  main.cpp  pusher.cpp  reflectiveBoundaryConditions.cpp  sheathModel.cpp  surfaceReactions.cpp  surface_model.cpp  utils.cpp
tests/: README.MD  pusher.py
tests/cpc_example/: Untitled.ipynb  createParticleSource.py  createPlasmaProfile.py  geometry.py  getChargeState.py  gitrGeometryPointPlane3d.cfg  (+6 more)
tools/IonSurfaceImpactAnalyzer/src/: CMakeLists.txt  Makefile  boundaries.f90  main.f90  parametersIO.f90  pusher.f90  share.f90  utilities.f90
(+36 files in other folders)
